add login page with auth0 with routing

--- a/client/src/app/login/login.page.html
+++ b/client/src/app/login/login.page.html
@@ -5,5 +5,8 @@
 </ion-header>
 
 <ion-content padding>
-LOGIN PAGE
+  <div> LOGIN PAGE THINGS GO HERE </div>
+  <ion-button color="secondary" shape="round" fill="outline" (click)="authService.login()">
+    Get Started
+  </ion-button>
 </ion-content>
