--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -1,5 +1,15 @@
 <ion-tabs>
 
+  <ion-header>
+    <ion-toolbar>
+      <ion-icon name="home"size="large"></ion-icon>
+      <ion-icon id="sun" name="sunny" size="large"></ion-icon>
+      <ion-icon name="rainy" size="large"></ion-icon>
+      <ion-icon name="thunderstorm" size="large"></ion-icon>
+      <ion-icon name="cloud" size="large"></ion-icon>
+      <span id="temp">75° </span>
+    </ion-toolbar>
+  </ion-header>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="shirt"></ion-icon>
