client/top nav bar now rendering dynamic temp

--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -7,7 +7,7 @@
       <ion-icon name="rainy" size="large"></ion-icon>
       <ion-icon name="thunderstorm" size="large"></ion-icon>
       <ion-icon name="cloud" size="large"></ion-icon>
-      <span id="temp">75° </span>
+      <span id="temp">{{this.temperature}}</span>
     </ion-toolbar>
   </ion-header>
   <ion-tab-bar slot="bottom">
