weather icon dynamicall rendering on the top nav bar

--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -3,10 +3,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-icon name="home"size="large"></ion-icon>
-      <ion-icon id="sun" name="sunny" size="large"></ion-icon>
-      <ion-icon name="rainy" size="large"></ion-icon>
-      <ion-icon name="thunderstorm" size="large"></ion-icon>
-      <ion-icon name="cloud" size="large"></ion-icon>
+      <ion-icon id="cond" name={{this.conditions}} size="large"></ion-icon>
       <span id="temp">{{this.temperature}}</span>
     </ion-toolbar>
   </ion-header>
