--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -4,7 +4,7 @@
     <ion-toolbar>
       <ion-icon name="home"size="large"></ion-icon>
       <ion-icon id="cond" name={{this.conditions}} size="large"></ion-icon>
-      <span id="temp">{{this.temperature}}</span>
+      <span id="temp">{{this.temperature}}°</span>
     </ion-toolbar>
   </ion-header>
   <ion-tab-bar slot="bottom">
