--- a/client/src/app/tab5/tab5.page.html
+++ b/client/src/app/tab5/tab5.page.html
@@ -1,1 +1,24 @@
-<ion-content></ion-content>
+<ion-content>
+  <ion-item *ngFor="let clothing of closet">
+
+    <ion-label>
+      <img [src]="clothing.imageUrl" height="150" width="fixed">
+    </ion-label>
+
+    <ion-list>
+      <ion-item>
+        <ion-label>Last Worn: {{clothing.lastUpdated}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Times Worn: {{clothing.count_worn}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Price: {{clothing.price}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Price per Wear: {{clothing.count_worn === 0 ? clothing.price : clothing.price/clothing.count_worn}}</ion-label>
+      </ion-item>
+    </ion-list>
+
+  </ion-item>
+</ion-content>
