formatted stats page html

--- a/client/src/app/tab5/tab5.page.html
+++ b/client/src/app/tab5/tab5.page.html
@@ -2,7 +2,7 @@
   <ion-item *ngFor="let clothing of closet">
 
     <ion-label>
-      <img [src]="clothing.imageUrl" height="150" width="fixed">
+      <ion-img [src]="clothing.imageUrl"></ion-img>
     </ion-label>
 
     <ion-list>
