--- a/client/src/app/tab5/tab5.page.html
+++ b/client/src/app/tab5/tab5.page.html
@@ -5,13 +5,13 @@
       </ion-list-header>
     
       <ion-item>
-        <ion-label>Least to Most</ion-label>
-        <ion-radio value="Least to Most"></ion-radio>
+        <ion-label>Least to Most Worn</ion-label>
+        <ion-radio (ionSelect)="sortCloset('least2Most')" checked></ion-radio>
       </ion-item>
     
       <ion-item>
-        <ion-label>Most to Least</ion-label>
-        <ion-radio value="Most to Least"></ion-radio>
+        <ion-label>Most to Least Worn</ion-label>
+          <ion-radio (ionSelect)="sortCloset('most2Least')"></ion-radio>
       </ion-item>
     </ion-radio-group>
 
