item option modal created and rendering. still needs work to close and complete

--- a/client/src/app/tab4/tab4.page.html
+++ b/client/src/app/tab4/tab4.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ul class="closetK" > 
-    <li *ngFor="let clothingItem of closetK">
+    <li (click)="presentModal()" *ngFor="let clothingItem of closetK">
       <div class="clothingItem">{{clothingItem.type}}</div>
       <img [src]="clothingItem.img" height="200" width="fixed">
     </li> -->
