--- a/client/src/app/modals/item-options-modal/item-options-modal.component.html
+++ b/client/src/app/modals/item-options-modal/item-options-modal.component.html
@@ -5,8 +5,7 @@
       <ion-button ion-item expand="block" routerLink="/home/tabs/tab1">Add to OOTD</ion-button>
       <ion-button ion-item expand="block" routerLink="/home/tabs/tab3">Sell</ion-button>
       <ion-button ion-item expand="block" routerLink="/home/tabs/tab5">See Stats</ion-button>
-      <ion-button ion-item expand="block" routerLink="tab1">Edit item details</ion-button>
-      <ion-button ion-item expand="block">Remove from closet</ion-button>
+      <ion-button ion-item expand="block" (click)="removeFromCloset()">Remove from closet</ion-button>
     </ion-list>
   </div>
 </ion-content>
