--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -1,33 +1,41 @@
 <ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+    <ion-grid fixed>
+      <ion-row class="ion-align-items-center ion-justify-content-center">
+
+        <ion-col>
+          <ion-thumbnail>
+            <ion-img [src]="accessory[getRandomIndex(accessory.length)].imageUrl"></ion-img>
+          </ion-thumbnail>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-img [src]="top[getRandomIndex(top.length)].imageUrl"></ion-img>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-img [src]="outerwear[getRandomIndex(outerwear.length)].imageUrl"></ion-img>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-img [src]="bottom[getRandomIndex(bottom.length)].imageUrl"></ion-img>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row class="ion-align-items-center ion-justify-content-center">
+        <ion-col>
+          <ion-button color="secondary">Confirm Outfit</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-img [src]="shoes[getRandomIndex(shoes.length)].imageUrl"></ion-img>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 </ion-content>
