--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -29,7 +29,7 @@
 
       <ion-row class="ion-align-items-center ion-justify-content-center">
         <ion-col>
-          <ion-button color="secondary">Confirm Outfit</ion-button>
+          <ion-button color="secondary" (click)="presentToast()">Confirm Outfit</ion-button>
         </ion-col>
         <ion-col>
           <ion-item>
