--- a/client/src/app/modals/item-options-modal/item-options-modal.component.html
+++ b/client/src/app/modals/item-options-modal/item-options-modal.component.html
@@ -2,8 +2,11 @@
   <!-- <div class="overlay" (click)="dismiss()"></div> -->
   <div class="modal_content">
     <ion-list id="options-list">
-      <ion-button ion-item expand="block" routerLink="/home/tabs/tab1">Add to OOTD</ion-button>
+      <ion-button id="closeButton" slots="end" ion-button icon-end (click)="close()">
+        <ion-icon name="close-circle"></ion-icon>
+      </ion-button>
       <ion-button ion-item expand="block" routerLink="/home/tabs/tab3">Sell</ion-button>
+      <ion-button ion-item expand="block" routerLink="/home/tabs/tab1">Add to OOTD</ion-button>
       <ion-button ion-item expand="block" routerLink="/home/tabs/tab5">See Stats</ion-button>
       <ion-button ion-item expand="block" (click)="removeFromCloset()">Remove from closet</ion-button>
     </ion-list>
