--- a/client/src/app/tab5/tab5.page.html
+++ b/client/src/app/tab5/tab5.page.html
@@ -46,7 +46,7 @@
         <ion-label>Price: {{clothing.price}}</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>Price per Wear: {{clothing.count_worn === 0 ? clothing.price : clothing.price/clothing.count_worn}}</ion-label>
+        <ion-label>Price per Wear: {{clothing.count_worn === 0 ? clothing.price : (clothing.price/clothing.count_worn).toFixed(2)}}</ion-label>
       </ion-item>
     </ion-list>
   </ion-item>
