--- a/client/src/app/modals/item-options-modal/item-options-modal.component.html
+++ b/client/src/app/modals/item-options-modal/item-options-modal.component.html
@@ -5,10 +5,10 @@
       <ion-button id="closeButton" slots="end" ion-button icon-end (click)="close()">
         <ion-icon name="close-circle"></ion-icon>
       </ion-button>
-      <ion-button ion-item expand="block" routerLink="/home/tabs/tab3">Sell</ion-button>
-      <ion-button ion-item expand="block" routerLink="/home/tabs/tab1">Add to OOTD</ion-button>
-      <ion-button ion-item expand="block" routerLink="/home/tabs/tab5">See Stats</ion-button>
-      <ion-button ion-item expand="block" (click)="removeFromCloset()">Remove from closet</ion-button>
+      <ion-button ion-item expand="block" routerLink="/home/tabs/tab3" (click)="close()">Sell</ion-button>
+      <ion-button ion-item expand="block" routerLink="/home/tabs/tab1" (click)="close()">Add to OOTD</ion-button>
+      <ion-button ion-item expand="block" routerLink="/home/tabs/tab5" (click)="close()">See Stats</ion-button>
+      <ion-button ion-item expand="block" (click)="removeFromCloset(); close()">Remove from closet</ion-button>
     </ion-list>
   </div>
 </ion-content>
