--- a/client/src/app/tab2/tab2.page.html
+++ b/client/src/app/tab2/tab2.page.html
@@ -1,82 +1,29 @@
 <ion-content>
-  <img [src]="currentImage" *ngIf="currentImage">
+  <!-- <img [src]="currentImage" *ngIf="currentImage"> -->
 
-<div class="container">
+  <div>Upload Your Closet!</div>
 
+  <img src="assets/camera-tab2.png">
 
-  <div class="row">
-
-    <div class="col-md-3">
-
-      <h3>Select files</h3>
-
-      Single
-      <input type="file" ng2FileSelect [uploader]="uploader" />
-    </div>
-
-    <div class="col-md-9" style="margin-bottom: 40px">
-
-      <h3>Upload queue</h3>
-      <p>Queue length: {{ uploader?.queue?.length }}</p>
-
-      <table class="table">
-        <thead>
-          <tr>
-            <th width="50%">Name</th>
-            <th>Size</th>
-            <th>Progress</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of uploader.queue">
-            <td><strong>{{ item?.file?.name }}</strong></td>
-            <td *ngIf="uploader.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
-            <td *ngIf="uploader.isHTML5">
-              <div class="progress" style="margin-bottom: 0;">
-                <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': item.progress + '%' }"></div>
-              </div>
-            </td>
-            <td class="text-center">
-              <span *ngIf="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-              <span *ngIf="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-              <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-            </td>
-            <td nowrap>
-              <button type="button" class="btn btn-success btn-xs" (click)="item.upload()"
-                [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                <span class="glyphicon glyphicon-upload"></span> Upload
-              </button>
-              <button type="button" class="btn btn-warning btn-xs" (click)="item.cancel()"
-                [disabled]="!item.isUploading">
-                <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-              </button>
-              <button type="button" class="btn btn-danger btn-xs" (click)="item.remove()">
-                <span class="glyphicon glyphicon-trash"></span> Remove
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-
-  
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button routerLink="/home/tabs/tab2" (click)="takePicture()">
-      <ion-icon name="camera"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-button (click)="addItem()">
-      <ion-icon name="save"></ion-icon>
-    </ion-fab-button>
-    <!-- Test Button -->
-    <!-- <ion-fab-button (click)="sendToCloud()">
+  <img [src]="uploadedImage" *ngIf="uploadedImage">
+  <div></div>
+  <div></div>
+  <ion-fab vertical="bottom">
+    <ion-row>
+      <ion-col>
+        <ion-fab-button routerLink="/home/tabs/tab2" (click)="takePicture()">
+          <ion-icon name="camera"></ion-icon>
+        </ion-fab-button>
+      </ion-col>
+      <ion-col>
+        <ion-fab-button routerLink="/home/tabs/tab2" (click)="upload()">
+          <ion-icon name="cloud"></ion-icon>
+        </ion-fab-button>
+      </ion-col>
+    </ion-row>
+  </ion-fab>
+  <!-- Test Button -->
+  <!-- <ion-fab-button (click)="sendToCloud()">
       <ion-icon name="shirt"></ion-icon>
     </ion-fab-button> -->
-  </ion-fab>
-    
-
-<!-- <ion-icon name="save" size="large" (click)="addItem()"></ion-icon> -->
 </ion-content>
