--- a/client/src/app/tab4/tab4.page.scss
+++ b/client/src/app/tab4/tab4.page.scss
@@ -1,3 +1,9 @@
 .modal-wrapper modal-wrapper-md sc-ion-modal-md{
   height: 50%;
 }
+
+.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
