--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -1,13 +1,13 @@
 <ion-tabs>
 
   <ion-header>
-    <ion-toolbar>
+    <ion-toolbar color="tertiary">
       <ion-icon name="home"size="large" routerLink="/notifications"></ion-icon>
       <ion-icon id="cond" name={{this.conditions}} size="large"></ion-icon>
       <span id="temp">{{this.temperature}}°</span>
     </ion-toolbar>
   </ion-header>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar ion-tab-bar color="danger" slot="bottom" slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="shirt"></ion-icon>
       <ion-label>OOTD</ion-label>
