Buttons appear on attributes for color and category. No functionality yet

--- a/client/src/app/attributes/tab2.attribute.html
+++ b/client/src/app/attributes/tab2.attribute.html
@@ -15,6 +15,9 @@
 
   </div>
   <div>Color</div>
+  <div *ngFor="let color of topTwoColors">
+    <ion-button (click)="color(color)" class="colorGenerated">{{color}}</ion-button>
+  </div>
   <div>Occasion</div>
   <div>
     <ion-button [color]="buttonColor" (click)="occasionItem('casual')">Casual</ion-button>
@@ -22,8 +25,9 @@
     <ion-button [color]="buttonColor" (click)="occasionItem('businesscasual')">Business Casual</ion-button>
     <ion-button [color]="buttonColor" (click)="occasionItem('cocktail')">Cocktail</ion-button>
   </div>
-  <ul *ngFor="let category of info">
-    <li class="category">{{category.name}}</li>
+  <div>Category</div>
+  <ul *ngFor="let category of finished">
+    <ion-button class="category">{{category}}</ion-button>
   </ul>
   <div>
     <ion-card-title>Price</ion-card-title>
