--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -4,12 +4,27 @@
 
         <ion-col>
           <ion-item>
-            <ion-img [src]="accessory.imageUrl"></ion-img>
+            <div *ngIf="!isLoading; else elseBlock">
+              <div *ngIf="!top">
+                You currently have no tops in your closet. Go add some!
+              </div>
+              <div *ngIf="top">
+                <ion-img [src]="accessory.imageUrl"></ion-img>
+              </div>
+            </div>
+            <ng-template #elseBlock>Loading</ng-template>
           </ion-item>
         </ion-col>
         <ion-col>
           <ion-item>
-            <ion-img [src]="top.imageUrl"></ion-img>
+            <div *ngIf="!isLoading; else elseBlock">
+              <div *ngIf="!top">
+                You currently have no tops in your closet. Go add some!
+              </div>
+              <div *ngIf="top">
+                <ion-img [src]="top.imageUrl"></ion-img>
+              </div>
+            </div>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -17,12 +32,26 @@
       <ion-row>
         <ion-col>
           <ion-item>
-            <ion-img [src]="outerwear.imageUrl"></ion-img>
+            <div *ngIf="!isLoading; else elseBlock">
+              <div *ngIf="!outerwear"> 
+                You currently have no Outerwear in your closet. Go add some!
+              </div>
+              <div *ngIf="outerwear"> 
+                <ion-img [src]="outerwear.imageUrl"></ion-img>
+              </div>
+            </div>
           </ion-item>
         </ion-col>
         <ion-col>
           <ion-item>
-            <ion-img [src]="bottom.imageUrl"></ion-img>
+            <div *ngIf="!isLoading; else elseBlock">
+              <div *ngIf="!bottom">
+                You currently have no bottoms in your closet. Go add some!
+              </div>
+              <div *ngIf="bottom">
+                <ion-img [src]="bottom.imageUrl"></ion-img>
+              </div>
+            </div>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -33,7 +62,9 @@
         </ion-col>
         <ion-col>
           <ion-item>
-            <ion-img [src]="shoe.imageUrl"></ion-img>
+            <div *ngIf="!isLoading && shoe; else elseBlock">
+              <ion-img [src]="shoe.imageUrl"></ion-img>
+            </div>
           </ion-item>
         </ion-col>
       </ion-row>
