--- a/client/src/app/notifications/notifications.page.html
+++ b/client/src/app/notifications/notifications.page.html
@@ -9,11 +9,15 @@
 <ion-content padding>
 
   <ion-button routerLink="/home"></ion-button>
+  <ion-item>
+    <ion-label>Select Time for Notifications</ion-label>
+    <ion-datetime [(ngModel)]="time" displayFormat="h:mm A" minuteValues="0,15,30,45" placeholder="Select Time" ></ion-datetime>
+  </ion-item>
   <ion-button expand="block" (click)="scheduleNotification()">Schedule</ion-button>
-  <ion-button expand="block" (click)="recurringNotification()">Every Minute</ion-button>
   <ion-button expand="block" (click)="repeatingDaily()">Daily</ion-button>
   <ion-button expand="block" (click)="getAll()">Get All</ion-button>
-
+  <ion-button expand="block" (click)="cancelNotifications()">Cancel notifications</ion-button>
+  <ion-button expand="block" (click)="printTime()">Get Time</ion-button>
   <ion-list>
     <ion-item *ngFor="let n of scheduled">
       <ion-label text-wrap>
