data on the sell page and minor css changes

--- a/client/src/app/tab2/tab2.page.html
+++ b/client/src/app/tab2/tab2.page.html
@@ -23,7 +23,7 @@
     </ion-row>
   </ion-fab>
   <!-- Test Button -->
-  <ion-fab-button (click)="sendToCloud()">
+  <!-- <ion-fab-button (click)="sendToCloud()">
       <ion-icon name="shirt"></ion-icon>
-    </ion-fab-button>
+    </ion-fab-button> -->
 </ion-content>
