added category to navParams & divider on modal

--- a/client/src/app/tab4/tab4.page.html
+++ b/client/src/app/tab4/tab4.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <ion-grid class="closet">
     <ion-row>
-      <ion-col id="test" size="6" (click)="presentModal(clothingItem.id_clothing_item)"
+      <ion-col id="test" size="6" (click)="presentModal(clothingItem.id_clothing_item, clothingItem.category); print(clothingItem)"
         *ngFor="let clothingItem of closet">
         <div class="clothingItem">{{clothingItem.category}}</div>
         <img class="displayed" [src]="clothingItem.imageUrl">
