--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -5,11 +5,11 @@
       <ion-col>
         <ion-item>
           <div *ngIf="!isLoading; else elseBlock">
-            <div *ngIf="!top">
-              You currently have no tops in your closet. Go add some!
+            <div *ngIf="!outfit['accessory']">
+              You currently have no Accessory in your closet. Go add some!
             </div>
-            <div *ngIf="top">
-              <ion-img [src]="accessory.imageUrl"></ion-img>
+            <div *ngIf="outfit['accessory']">
+              <ion-img [src]="outfit['accessory'].imageUrl"></ion-img>
             </div>
           </div>
           <ng-template #elseBlock>Loading</ng-template>
@@ -18,11 +18,11 @@
       <ion-col>
         <ion-item>
           <div *ngIf="!isLoading; else elseBlock">
-            <div *ngIf="!top">
-              You currently have no tops in your closet. Go add some!
+            <div *ngIf="!outfit['top']">
+              You currently have no Top in your closet. Go add some!
             </div>
-            <div *ngIf="top">
-              <ion-img [src]="top.imageUrl"></ion-img>
+            <div *ngIf="outfit['top']">
+              <ion-img [src]="outfit['top'].imageUrl"></ion-img>
             </div>
           </div>
         </ion-item>
@@ -33,11 +33,11 @@
       <ion-col>
         <ion-item>
           <div *ngIf="!isLoading; else elseBlock">
-            <div *ngIf="!outerwear">
+            <div *ngIf="!outfit['outerwear']">
               You currently have no Outerwear in your closet. Go add some!
             </div>
-            <div *ngIf="outerwear">
-              <ion-img [src]="outerwear.imageUrl"></ion-img>
+            <div *ngIf="outfit['outerwear']">
+              <ion-img [src]="outfit['outerwear'].imageUrl"></ion-img>
             </div>
           </div>
         </ion-item>
@@ -45,11 +45,11 @@
       <ion-col>
         <ion-item>
           <div *ngIf="!isLoading; else elseBlock">
-            <div *ngIf="!bottom">
-              You currently have no bottoms in your closet. Go add some!
+            <div *ngIf="!outfit['bottom']">
+              You currently have no Bottom in your closet. Go add some!
             </div>
-            <div *ngIf="bottom">
-              <ion-img [src]="bottom.imageUrl"></ion-img>
+            <div *ngIf="outfit['bottom']">
+              <ion-img [src]="outfit['bottom'].imageUrl"></ion-img>
             </div>
           </div>
         </ion-item>
@@ -60,11 +60,13 @@
       <ion-col>
         <ion-button color="secondary" (click)="presentToast()">{{outfitSelected ? 'Current Outfit' : 'Confirm Outfit'}}
         </ion-button>
+        <ion-button color="secondary" (click)="retrieveOutfit()">
+        </ion-button>
       </ion-col>
       <ion-col>
         <ion-item>
-          <div *ngIf="!isLoading && shoe; else elseBlock">
-            <ion-img [src]="shoe.imageUrl"></ion-img>
+          <div *ngIf="!isLoading && outfit['shoe']; else elseBlock">
+            <ion-img [src]="outfit['shoe'].imageUrl"></ion-img>
           </div>
         </ion-item>
       </ion-col>
