addToOOFD fully functional

--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -65,8 +65,8 @@
       </ion-col>
       <ion-col>
         <ion-item>
-          <div *ngIf="!isLoading && outfit['shoe']; else elseBlock">
-            <ion-img [src]="outfit['shoe'].imageUrl"></ion-img>
+          <div *ngIf="!isLoading && outfit['shoes']; else elseBlock">
+            <ion-img [src]="outfit['shoes'].imageUrl"></ion-img>
           </div>
         </ion-item>
       </ion-col>
