--- a/client/src/app/modals/item-options-modal/item-options-modal.component.html
+++ b/client/src/app/modals/item-options-modal/item-options-modal.component.html
@@ -8,7 +8,7 @@
       <ion-item-divider>
       </ion-item-divider>
 
-      <ion-button ion-item expand="block" (click)="changeSelectedItem(); redirectTo('home/tabs/tab1'); close()">Add to OOTD</ion-button>
+      <ion-button ion-item expand="block" (click)="changeSelectedItem(); close()" routerLink="/home/tabs/tab1">Add to OOTD</ion-button>
       <ion-button ion-item expand="block" routerLink="/home/tabs/tab3" (click)="close()">Sell</ion-button>
       <ion-button ion-item expand="block" (click)="removeFromCloset()">Remove from closet</ion-button>
       <ion-button ion-item expand="block" routerLink="/home/tabs/tab5" (click)="close()">See Stats</ion-button>
