test button commented out on tab1

--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -60,8 +60,8 @@
       <ion-col>
         <ion-button color="secondary" (click)="presentToast()">{{outfitSelected ? 'Current Outfit' : 'Confirm Outfit'}}
         </ion-button>
-        <ion-button color="secondary" (click)="retrieveOutfit()">
-        </ion-button>
+        <!-- <ion-button color="secondary" (click)="retrieveOutfit()">
+        </ion-button> -->
       </ion-col>
       <ion-col>
         <ion-item>
