--- a/client/src/app/tab3/tab3.page.html
+++ b/client/src/app/tab3/tab3.page.html
@@ -2,7 +2,7 @@
 <ion-content>
   <h1>Sell to eBay</h1>
   <ion-button>Sell All</ion-button>
-  <ion-button>Sell Selected</ion-button>
+  <ion-button routerLink="/sell-on-ebay" (click)="sell()">Sell Selected</ion-button>
   <ion-button>Reset</ion-button>
   <ion-grid>
     <ion-row class="ion-align-items-start" *ngFor="let clothing of filteredCloset">
@@ -18,12 +18,12 @@
           <ion-radio-group>
             <ion-item>
               <ion-label>Keep</ion-label>
-              <ion-radio slot="start" checked></ion-radio>
+              <ion-radio slot="start" (ionSelect)="radioValueSellOrKeep(clothing.id_clothing_item, 0, clothing)" checked></ion-radio>
             </ion-item>
         
             <ion-item>
               <ion-label>Sell</ion-label>
-              <ion-radio slot="start" value="clothing.id_clothing_item"></ion-radio>
+              <ion-radio slot="start" (ionSelect)="radioValueSellOrKeep(clothing.id_clothing_item, 1, clothing)"></ion-radio>
             </ion-item>
           </ion-radio-group>
         </ion-list>
