login page updated with button centered and no text

--- a/client/src/app/login/login.page.html
+++ b/client/src/app/login/login.page.html
@@ -1,12 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>OPTICLOSET</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <div> LOGIN PAGE THINGS GO HERE </div>
-  <ion-button color="secondary" shape="round" fill="outline" (click)="authService.login()">
-    Get Started
-  </ion-button>
+
+  <div text-center>
+      <ion-button color="secondary" shape="round" fill="outline" (click)="authService.login()">
+        Get Started
+      </ion-button>
+  </div>
+<!-- 
+    <span text-center>
+      <ion-button color="secondary" shape="round" fill="outline" (click)="authService.login()">
+        Get Started
+      </ion-button>
+    </span> -->
+
 </ion-content>
