Added more functionality to sell page, redirects back to the tab3 page

--- a/client/src/app/tab3/tab3sell/tab3sell.html
+++ b/client/src/app/tab3/tab3sell/tab3sell.html
@@ -23,6 +23,6 @@
 
   <div>
     <ion-button>Cancel</ion-button>
-    <ion-button>Next</ion-button>
+    <ion-button (click)="nextItem()" routerLink='/home/tabs/tab3' >Next</ion-button>
   </div>
 </ion-content>
