Now updating at each click, toast appears after selling to Ebay

--- a/client/src/app/tab3/tab3sell/tab3sell.html
+++ b/client/src/app/tab3/tab3sell/tab3sell.html
@@ -23,6 +23,7 @@
 
   <div>
     <ion-button>Cancel</ion-button>
-    <ion-button (click)="nextItem()" routerLink='/home/tabs/tab3' >Next</ion-button>
+    <ion-button (click)="nextItem(); presentToast()" routerLink='/home/tabs/tab3' >Next</ion-button>
   </div>
 </ion-content>
+<!-- /home/tabs/tab3 -->
