getCloset moved to tabs, closet now stored on the outfitSelected service to be shared between tabs, stats details functionality almost complete

--- a/client/src/app/tab5/tab5.page.html
+++ b/client/src/app/tab5/tab5.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-radio-group>
     <!-- Sort title -->
-    <ion-list-header>
+    <ion-list-header (click)="retrieveItem()">
       Sort By
     </ion-list-header>
     <!-- Sort methods -->
