--- a/client/src/app/modals/item-options-modal/item-options-modal.component.html
+++ b/client/src/app/modals/item-options-modal/item-options-modal.component.html
@@ -11,7 +11,7 @@
       <ion-button ion-item expand="block" (click)="changeSelectedItem(); close()" routerLink="/home/tabs/tab1">Add to OOTD</ion-button>
       <ion-button ion-item expand="block" routerLink="/home/tabs/tab3" (click)="close()">Sell</ion-button>
       <ion-button ion-item expand="block" (click)="removeFromCloset()">Remove from closet</ion-button>
-      <ion-button ion-item expand="block" routerLink="/home/tabs/tab5" (click)="close()">See Stats</ion-button>
+      <ion-button ion-item expand="block" (click)="chooseItem(); close()" routerLink="/home/tabs/tab5">See Stats</ion-button>
 
     </ion-list>
   </div>
