selected item stats fully functional with reset filters added and functional

--- a/client/src/app/tab5/tab5.page.html
+++ b/client/src/app/tab5/tab5.page.html
@@ -23,7 +23,12 @@
   </ion-radio-group>
   <!-- date picker title -->
   <ion-list-header>
-    Filter
+    <ion-label>
+      Filter
+    </ion-label>
+    <ion-label (click)="resetFilter()">
+      Reset Filters
+    </ion-label>
   </ion-list-header>
   <!-- date picker -->
   <ion-item>
