defaulted Category to all on closet view

--- a/client/src/app/tab4/tab4.page.html
+++ b/client/src/app/tab4/tab4.page.html
@@ -9,7 +9,7 @@
   </ion-item-divider> -->
   
 
-    <ion-item catOptions>
+    <ion-item class="ion-justify-content-center">
       <ion-select #S [(ngModel)]="category" (ionChange)="setFilter()">
         <ion-select-option value="all"selected>All</ion-select-option>
         <ion-select-option value="top">Tops</ion-select-option>
