--- a/client/src/app/tab4/tab4.page.scss
+++ b/client/src/app/tab4/tab4.page.scss
@@ -8,7 +8,13 @@
     margin-right: auto;
 }
 
-#catOptions{
-    text-align: center !important;
-    // width: 100%;
+// #catOptions{
+//     text-align: center !important;
+//     // width: 100%;
+// }
+.toolbar-container {
+  padding-top: 0% !important;
+  padding-right: 0% !important;
+  padding-left: 0% !important;
+  padding-bottom: 0% !important;
 }
