background image added to login page and color added to nav bar on login page

--- a/client/src/app/login/login.page.html
+++ b/client/src/app/login/login.page.html
@@ -1,17 +1,17 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="tertiary">
     <ion-title text-center>OPTICLOSET</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="background">
 
   <ion-row justify-content-center align-items-center style='height: 100%'>
     <div text-center>
-      <ion-button color="secondary" shape="round" fill="outline" (click)="authService.login()">
+      <ion-button color="secondary" shape="round" fill="solid" (click)="authService.login()">
         Get Started
       </ion-button>
     </div>
   </ion-row>
-  
+
 </ion-content>
