--- a/client/src/app/login/login.page.scss
+++ b/client/src/app/login/login.page.scss
@@ -6,13 +6,6 @@
   transform: translateY(-50%);
 }
 
-// .scroll-content {
-//   display: table !important;
-//   width: 100% !important;
-//   height: 100% !important;
-// }
-// .scroll {
-//   display: table-cell;
-//   vertical-align: middle;
-//   text-align: center;
-// }
+ion-content.background{
+    --background: url(../../assets/closet-background.jpg) 0 0/100% 100% no-repeat;
+}
