buttons on login and OOTD page color changed & grid resized into 3 equal size rows

--- a/client/src/app/login/login.page.html
+++ b/client/src/app/login/login.page.html
@@ -8,7 +8,7 @@
 
   <ion-row justify-content-center align-items-center style='height: 100%'>
     <div text-center>
-      <ion-button color="secondary" shape="round" fill="solid" (click)="authService.login()">
+      <ion-button color="tertiary" shape="round" fill="solid" (click)="authService.login()">
         Get Started
       </ion-button>
     </div>
