--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -58,7 +58,7 @@
 
     <ion-row class="ion-align-items-center ion-justify-content-center">
       <ion-col>
-        <ion-button color="secondary" (click)="presentToast()">{{outfitSelected ? 'Current Outfit' : 'Confirm Outfit'}}
+        <ion-button color="tertiary" (click)="presentToast()">{{outfitSelected ? 'Current Outfit' : 'Confirm Outfit'}}
         </ion-button>
         <!-- <ion-button color="secondary" (click)="retrieveOutfit()">
         </ion-button> -->
