--- a/client/src/app/tabs/tabs.page.scss
+++ b/client/src/app/tabs/tabs.page.scss
@@ -5,6 +5,14 @@
   height: 30%;
 }
 
+.logo{
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  top: 10%;
+  transform: translateX(450%);
+}
+
 
 // @media not all and (min-height: 600px) and (min-width: 768px) {
 //   ion-modal ion-backdrop {
