--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -1,5 +1,29 @@
 <ion-content>
   <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <ion-item #S class="ion-justify-content-center">
+          <ion-select>
+            <ion-select-option value="random" selected>Random</ion-select-option>
+            <ion-select-option value="colorMatch">ColorMatch</ion-select-option>
+            <ion-select-option value="allNeutral">All Neutrals</ion-select-option>
+            <ion-select-option value="monochromatic">Monochromatic</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-col>
+      <ion-col>
+        <ion-item #S class="ion-justify-content-center">
+          <ion-select>
+            <ion-select-option value="random" selected>Random</ion-select-option>
+            <ion-select-option value="casual">Casual</ion-select-option>
+            <ion-select-option value="formal">Formal</ion-select-option>
+            <ion-select-option value="business">Business</ion-select-option>
+            <ion-select-option value="goingOut">Going Out</ion-select-option>
+            <ion-select-option value="athletic">Athletic</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-col>
+    </ion-row>
     <ion-row class="ion-align-items-center ion-justify-content-center">
 
       <ion-col>
