--- a/client/src/app/tab4/tab4.page.html
+++ b/client/src/app/tab4/tab4.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar color="light">
+    <ion-icon name="calendar" routerLink='/packing-list'></ion-icon>
     <!-- <ion-title>
       Closet
     </ion-title> -->
