--- a/client/src/app/packing-list/packing-list.component.html
+++ b/client/src/app/packing-list/packing-list.component.html
@@ -19,5 +19,6 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+    <ion-icon name="arrow-round-back" routerLink='/home/tabs/tab4'></ion-icon>
 </ion-content>
 
