update item feature fully functional

--- a/client/src/app/tab4/tab4.page.html
+++ b/client/src/app/tab4/tab4.page.html
@@ -15,8 +15,8 @@
         <ion-select-option value="all"selected>All</ion-select-option>
         <ion-select-option value="top">Tops</ion-select-option>
         <ion-select-option value="bottom">Bottoms</ion-select-option>
-        <ion-select-option value="outerware">Outerwares</ion-select-option>
-        <ion-select-option value="one-piece">One-Pieces</ion-select-option>
+        <ion-select-option value="outerwear">Outerwear</ion-select-option>
+        <ion-select-option value="one-piece">One-Piece</ion-select-option>
         <ion-select-option value="shoes">Shoes</ion-select-option>
         <ion-select-option value="accessory">Accessories</ion-select-option>
       </ion-select>
