--- a/client/src/app/attributes/tab2.attribute.html
+++ b/client/src/app/attributes/tab2.attribute.html
@@ -1,8 +1,8 @@
 <ion-content>
   <ion-card-title>Attributes</ion-card-title>
   <div>
-    <ion-button #comfortable color="buttonColor" (click)="attributeItem('2')">Comfortable</ion-button>
-    <ion-button #heavy color="buttonColor" (click)="attributeItem('4')">Heavy</ion-button>
+    <ion-button #comfortable [color]="buttonColor" (click)="attributeItem('2')">Comfortable</ion-button>
+    <ion-button #heavy [color]="buttonColor" (click)="attributeItem('4')">Heavy</ion-button>
     <ion-button #tight [color]="buttonColor" (click)="attributeItem('3')">Tight</ion-button>
     <ion-button #short [color]="buttonColor" (click)="attributeItem('5')">Short</ion-button>
     <ion-button #long [color]="buttonColor" (click)="attributeItem('6')">Long</ion-button>
@@ -50,7 +50,7 @@
     <ion-label>Select One</ion-label>
     <ion-select multiple="false" cancelText="Cancel" okText="Done" [(ngModel)]="chosenCategory" (ionChange)="categorySelected(chosenCategory)">
       <ion-select-option value="top">Top</ion-select-option>
-      <ion-select-option value="bottom">Orange</ion-select-option>
+      <ion-select-option value="bottom">Bottom</ion-select-option>
       <ion-select-option value="one-piece">One Piece</ion-select-option>
       <ion-select-option value="outerware">Outerware</ion-select-option>
       <ion-select-option value="shoes">Shoes</ion-select-option>
@@ -66,7 +66,7 @@
   </div>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button routerLink="/home/tabs/tab2" (click)="addItem()">
+    <ion-fab-button (click)="addItem()">
       <ion-icon name="save"></ion-icon>
     </ion-fab-button>
   </ion-fab>
