Fixed rotation of imaage

--- a/client/src/app/attributes/tab2.attribute.html
+++ b/client/src/app/attributes/tab2.attribute.html
@@ -71,7 +71,7 @@
     </ion-fab-button>
   </ion-fab>
 
-  <img [src]="url" *ngIf="url">
+  <img class="photoNoBackground" [src]="url" *ngIf="url">
 </ion-content>
 
 <!-- 67 routerLink="/home/tabs/tab2" -->
